# Axiom

./: .gitignore  README.md  pyproject.toml  tmp_avtr_paper_text.txt
axiom/: __init__.py  analytics.py  answering.py  app.py  biorag.py  chunking.py  citation.py  cli.py  database.py  dependencies.py  embeddings.py  evaluation.py  extractors.py  image_generation.py  ingestion.py  investigation.py  local_app.py  mission.py  reports.py  retrieval.py  uploads.py  vision.py  workstation.py
axiom/web/: app.js  index.html  style.css
axiom_offline_intel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
benchmarks/: hiverag_stress_eval.jsonl  hiverag_stress_ragas.jsonl  local_axiom_eval.jsonl
docs/: ARCHITECTURE.md  HIVERAG_RESEARCH_PAPER_SHIVANSH_MUKHIA.md  SIH25231_PLAN.md
samples/: annexure_4b.txt  intercept_call_22.txt
samples/multimodal/: field_annexure.pdf.txt  ntro_case_brief.doc  ntro_case_brief.doc.txt  operator_notes.docx  operator_notes.docx.txt  screen_capture.png.ocr.txt  voice_call.wav.transcript.txt
samples/stress_corpus/: 01_monsoon-farming_annex_report.txt  01_monsoon-farming_audit_log.txt  01_monsoon-farming_briefing.txt  01_monsoon-farming_dashboard_ocr.txt  01_monsoon-farming_field_note.txt  01_monsoon-farming_operator_transcript.txt  02_rural-clinic_annex_report.txt  02_rural-clinic_audit_log.txt  02_rural-clinic_briefing.txt  02_rural-clinic_dashboard_ocr.txt  (+62 more)
tests/: test_axiom_core.py  test_biorag_bees.py  test_biorag_honeycomb.py  test_evaluation_metrics.py
tools/: build_beir_benchmark.py  build_hiverag_pdf.py  build_large_benchmark.py
